Cleanup of the test class - review by Ingrid
Signed-off-by: mposolda <mposolda@gmail.com>